# terminal_tv

./: .gitignore  CMakeLists.txt  README.md
build-shared/: CMakeCache.txt  terminal_tv
src/: main.cpp
